samples/_failures_safe/1761540526_352fd6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_425f45d0.c: In function ‘main’:
./samples/SAFE/__tmp_425f45d0.c:165:5: error: expected expression at end of input
  165 |     for (int i = 0; i < edge_count;
      |     ^~~
./samples/SAFE/__tmp_425f45d0.c:165:5: error: expected declaration or statement at end of input
